--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
+    "chart.js": "^3.5.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "v-click-outside": "^3.2.0",
+    "vue-chartjs": "^3.5.1",
+    "vue-click-outside": "^1.1.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
