--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
+    "@inertiajs/inertia-vue3": "^0.6.0",
+    "@vuepic/vue-datepicker": "^5.0.1",
+    "@vueuse/core": "^10.1.2",
     "chart.js": "^3.5.0",
     "core-js": "^3.8.3",
+    "export-from-json": "^1.7.2",
+    "localize": "^0.4.7",
     "v-click-outside": "^3.2.0",
     "vue-chartjs": "^3.5.1",
     "vue-click-outside": "^1.1.0",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
