--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
+    "@heroicons/vue": "^2.0.18",
     "@inertiajs/inertia-vue3": "^0.6.0",
+    "@vue-hero-icons/outline": "^1.7.2",
     "@vuepic/vue-datepicker": "^5.0.1",
     "@vueuse/core": "^10.1.2",
     "chart.js": "^3.5.0",
     "core-js": "^3.8.3",
     "export-from-json": "^1.7.2",
+    "heroicons-vue": "^0.0.0",
     "localize": "^0.4.7",
     "v-click-outside": "^3.2.0",
     "vue-chartjs": "^3.5.1",
